--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kurva Persamaan Kuadrat</title>
+    <title>Quadratic Curve Plotter</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Kurva Persamaan Kuadrat</h1>
+        <h1>Quadratic Curve Plotter</h1>
         <form id="quadraticForm">
             <label for="a">Nilai a:</label>
             <input type="number" id="a" name="a" required>
@@ -16,9 +16,9 @@
             <input type="number" id="b" name="b" required>
             <label for="c">Nilai c:</label>
             <input type="number" id="c" name="c" required>
-            <button type="submit">Submit</button>
+            <button type="submit">Generate Curve</button>
         </form>
-        <canvas id="quadraticCanvas" width="800" height="600"></canvas>
+        <canvas id="quadraticCanvas"></canvas>
     </div>
     <script src="script.js"></script>
 </body>
