--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <input type="number" id="c" name="c" required>
             <button type="submit">Generate Curve</button>
         </form>
-        <canvas id="quadraticCanvas"></canvas>
+        <div class="canvas-container">
+            <canvas id="quadraticCanvas"></canvas>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
