--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <div class="container">
         <h1>Quadratic Curve Plotter</h1>
         <form id="quadraticForm">
-            <label for="a">Nilai a:</label>
-            <input type="number" id="a" name="a" required>
-            <label for="b">Nilai b:</label>
-            <input type="number" id="b" name="b" required>
-            <label for="c">Nilai c:</label>
-            <input type="number" id="c" name="c" required>
+            <div class="input-row">
+                <label for="a">Nilai a:</label>
+                <input type="number" id="a" name="a" required>
+            </div>
+            <div class="input-row">
+                <label for="b">Nilai b:</label>
+                <input type="number" id="b" name="b" required>
+            </div>
+            <div class="input-row">
+                <label for="c">Nilai c:</label>
+                <input type="number" id="c" name="c" required>
+            </div>
             <button type="submit">Generate Curve</button>
         </form>
         <div class="canvas-container">
