--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quadratic Curve Plotter</title>
+    <title>Kurva Persamaan Kuadrat</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Quadratic Curve Plotter</h1>
+        <h1>Kurva Persamaan Kuadrat</h1>
         <form id="quadraticForm">
             <div class="input-row">
                 <label for="a">Nilai a:</label>
